# Zengram

./: .env.example  .gitignore  AUDIT-2026-04-02.md  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
adapters/bash/: SKILL.md  brain.sh
adapters/claude-code/: README.md
adapters/claude-code/sessionend/: SKILL.md
api/: package-lock.json  package.json
api/scripts/: backfill-keyword-index.js  cleanup-garbage-entities.js  rebuild-from-postgres.js  reindex-embeddings.js  status-staleness.js  tier2-compression.js
api/src/: index.js
api/src/middleware/: auth.js  ratelimit.js  validate.js
api/src/routes/: briefing.js  client.js  collections.js  consolidation.js  dashboard.js  entities.js  export.js  graph.js  memory.js  reconcile.js  reflect.js  (+3 more)
api/tests/: auth.test.js  client-resolver.test.js  entities.test.js  memory-write-utils.test.js  notifications.test.js  ratelimit.test.js  rrf.test.js
docs/: api-reference.md  architecture.md  benchmarks.md  configuration.md  data-model.md  mcp-tools.md  operations.md
examples/: curl-demo.sh  multi-agent-scenario.sh  python-client.py
mcp-server/: CHANGELOG.md  README.md  package-lock.json  package.json
mcp-server/src/: index.js
sdk/python/: README.md  pyproject.toml
sdk/python/multi_agent_memory/: __init__.py  client.py  models.py
sdk/python/tests/: test_client.py
sdk/python/zengram/: __init__.py  client.py  models.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
(+35 files in other folders)
