[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zengram"
version = "0.1.0"
description = "Python SDK for Zengram — cross-machine, cross-agent persistent memory for AI systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ZenSystem AI" },
]
keywords = ["ai", "agents", "memory", "multi-agent", "mcp", "qdrant", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/ZenSystemAI/zengram"
Documentation = "https://github.com/ZenSystemAI/zengram/tree/main/sdk/python"
Repository = "https://github.com/ZenSystemAI/zengram"

[tool.hatch.build.targets.wheel]
packages = ["zengram"]
